--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 }
 
 body {
-  margin: 0 0 3rem 0;
+  margin: 0 5px 3rem 5px;
   padding: 0;
   font-family: 'Poppins', sans-serif;
   font-size: .938rem;
@@ -55,6 +55,7 @@ ul{
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 img {
@@ -63,7 +64,7 @@ img {
 }
 
 .section{
-  padding: 1.5rem 0;
+  padding: 1rem 0;
 }
 
 .section-title{
@@ -140,4 +141,72 @@ img {
 .social_icon{
   font-size: 1.5rem;
   margin-right: 5px;
+}
+
+.profile_description{
+  text-align: justify;
+}
+
+.education_content{
+  display:flex;
+}
+
+.education_time{
+  padding-right: 1.5rem;
+}
+
+.education_rounder{
+  position: relative;
+  display: block;
+  width: 16px;
+  height: 16px;
+  background-color: var(--text-color-light);
+  border-radius: 50%;
+  margin-top: 1.4rem;
+}
+
+.education_line{
+  display: block;
+  width: 2px;
+  height: 95%;
+  background-color: var(--text-color-light);
+  margin-left: 7px;
+}
+
+.education_title{
+  margin-top: 1rem;
+}
+
+.education_data{
+  display: block;
+}
+
+#masters{
+  font-style: italic;
+  text-decoration: underline;
+}
+
+#education-end{
+  height: 70%;
+}
+
+.education_studies{
+  margin-top: -10px;
+  display: block;
+  font-weight: bold;
+}
+
+.education_icon{
+  margin-right: 4px;
+}
+
+.education_item{
+  display: block;
+}
+
+.education_list{
+  display: block;
+  list-style-type: disc;
+  color: var(--text-color-light);
+  margin-left: 1rem;
 }
