--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/*===== GOOGLE FONTS =====*/
 
 :root {
   --header-height: 3rem;
@@ -225,28 +224,44 @@ img {
 }
 
 .skills_content{
-  display:flex;
-  grid-template-columns: repeat(2, 1fr);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   margin: auto;
+}
+
+.languages_content{
+  display: flex;
+  grid-template-columns: repeat(2, 1fr);
   justify-content: center;
-  gap:0;
+  margin: auto;
 }
 
 .skills_name{
   display: flex;
   align-items: center;
-  margin-right: 5rem;
-  margin-bottom: var(--mb-3);
-  font-weight: var(--font-semi-bold)
 }
 
-.skills_circle{
+.languages_name{
+  display: block;
+  align-items: center;
+  margin-right: 3rem;
+}
+
+.skills_circle,
+.languages_circle{
   display: inline-block;
-  width: 5px;
-  height: 5px;
-  background-color: var(--text-color);
+  width: .9rem;
+  height: .9rem;
+  background-color: #585858;
   border-radius: 50%;
-  margin-right: .75rem;
+}
+
+.empty_circle{
+  display: inline-block;
+  width: .9rem;
+  height: .9rem;
+  background-color: #E8E8E8;
+  border-radius: 50%;
 }
 
 
@@ -262,4 +277,29 @@ img {
 
 #experience-end{
   height: 79%;
+}
+
+#references{
+  text-align: center;
+}
+
+.interests_container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: auto;
+  justify-content: center;
+  margin-top: var(--mb-2);
+}
+
+.interests_content{
+  display: flex;
+  flex-direction:column;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+
+.interests_icon{
+  font-size: 2rem;
+  color: var(--text-color-light);
+  margin-bottom: .25rem;
 }
